# todo-app-axum-elm

./: README.md
todo-api/: Cargo.toml  Makefile
todo-api/migrations/: 20221017060136_init.sql
todo-api/src/: handlers.rs  infra.rs  main.rs  repositories.rs
todo-api/src/domain/: repository.rs
todo-api/src/domain/model/: todo.rs
todo-api/src/domain/repository/: todorepository.rs
todo-api/src/handler/: handler.rs  route.rs
todo-api/src/infra/: sqlhandler.rs
todo-front/: elm.js  elm.json  index.html
todo-front/elm-stuff/0.19.1/: Main.elmo  Todo.elmi
todo-front/elm-stuff/generated-code/elm-community/elm-test/0.19.1-revision9/: dependencies.58b61ef72bfb1377e739ab5ee1bf893ba1830910cbb397470ce73786288094bf.json  dependencies.bd8f700f41a7b1b79b91afa4387b443dc909f62a9bbc12f47cf0493a195bdc4c.json  dependencies.fbea7b9e107c06e84f8f20cbf56eb4202c2e9d62e51988236616895d28c3f6f8.json  elm.json
todo-front/elm-stuff/generated-code/elm-community/elm-test/0.19.1-revision9/elm-stuff/0.19.1/: Css.elmi  Css.elmo  Main.elmi  Todo.elmo
todo-front/src/: Css.elm  Main.elm  Todo.elm
